Let a clause say where the values stop on each number it says it of
Two places kept collapsing a per-position answer where it had to stay one, and
both were the same move wearing different clothes.

A reading that says nothing about the strings at a position leaves every string
standing there. Held together with another that does, that changes nothing and
the other stands; held as a choice, it is every string and absorbs whatever the
other admits. The answer over two of these took the non-empty side whole, which
is right for the first and draws a line the model does not draw for the second:
`String.startsWith("JP", s) || b` says nothing about `s`, and the position came
back stopped between two places. So the two operations say which element is
theirs, and neither side is waved through for being empty.

And a clause read a branch at a time comes to an answer per number, which the
classification of what it states could hold one of. One conjunct whose branches
all admit a run at two positions states where the values stop on both, and that
was refused rather than said; one that states a run on one number while nothing
settled the next had the second question dropped, because a clause classified as
stating a bound carried nowhere to say what it had not settled.

So it carries the numbers it stops the values on and the names whose line
nothing worked out, and the question is asked at the place rather than of the
clause. A comparison states one line and leaves nothing standing, which is the
same answer it always gave.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>